--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 3000 
-MONGO_URL= mongodb://localhost:27017/products-test-b7-2023-01
+MONGO_URL= mongodb+srv://nguyendung180203:aqjIsw1bU55SzFVz@cluster0.uabl1.mongodb.net/products-test-b7-2023-01
