--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.5.2",
+    "mongoose-slug-updater": "^3.3.0",
     "pug": "^3.0.3"
   },
   "devDependencies": {
