--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.5.2",
     "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
